--- a/INT_1/Jenkinsfile
+++ b/INT_1/Jenkinsfile
@@ -2,23 +2,23 @@ pipeline {
     agent any
 
     environment { 
-        MASTER = 'Master Jenkins'
+        CHILD = 'INT1 Jenkins'
     }
 
     stages {
         stage('Build') {
             steps {
-                echo 'Building main..${env.MASTER}'
+                echo 'Building int1..${env.MASTER}'
             }
         }
         stage('Test') {
             steps {
-                echo 'Testing main..'
+                echo 'Testing int1..${env.CHILD}'
             }
         }
         stage('Deploy') {
             steps {
-                echo 'Deploying main....'
+                echo 'Deploying int1....'
             }
         }
     }
